# paperseek

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  config.yaml.example  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search_cli.py  setup.py  sitemap.xml
api/database_clients/: index.html
api/models/: index.html
api/unified_client/: index.html
api/utilities/: index.html
architecture/: index.html
configuration/: index.html
contributing/: index.html
databases/: index.html
docs/: architecture.md  configuration.md  contributing.md  databases.md  examples.md  index.md  installation.md  pdf_downloader.md  quickstart.md
docs/api/: database_clients.md  models.md  unified_client.md  utilities.md
examples/: advanced_usage.py  basic_usage.py  domain_specific_usage.py  index.html  pdf_download_example.py  search.py  streaming_export.py
installation/: index.html
pdf_downloader/: index.html
quickstart/: index.html
search/: search_index.json
src/paperseek/: __init__.py
src/paperseek/clients/: __init__.py  arxiv.py  core.py  crossref.py  dblp.py  doi.py  openalex.py  pubmed.py  semantic_scholar.py  unpaywall.py
src/paperseek/core/: __init__.py  base.py  config.py  exceptions.py  models.py  unified_client.py
src/paperseek/exporters/: __init__.py  base.py  bibtex_exporter.py  csv_exporter.py  json_exporter.py
src/paperseek/utils/: __init__.py  logging.py  normalization.py  pdf_downloader.py  rate_limiter.py  retry.py  session_pool.py
tests/: test_arxiv_client.py  test_base_client.py  test_base_exporter.py  test_bibtex_exporter.py  test_core_client.py  test_crossref_client.py  test_csv_exporter.py  test_dblp_client.py  test_doi_client.py  test_json_exporter.py  test_logging.py  test_models.py  test_normalization.py  test_openalex_client.py  test_pdf_downloader.py  test_pubmed_client.py  test_rate_limiter.py  test_retry.py  test_semantic_scholar_client.py  test_session_pool.py  test_unified_client.py  test_unpaywall_client.py
